[package]
name = "ssr-rust"
version = "0.1.0"
authors = ["yinpenghhz@hotmail.com <yinpenghhz@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = {version="1", features=["full"]}
mio = {version="0.7", features= ["os-poll", "net"]}
